[gd_scene load_steps=30 format=3 uid="uid://dcne03gg2yltb"]

[ext_resource type="Script" path="res://PigeonSpawner.gd" id="1_llwul"]
[ext_resource type="Texture2D" uid="uid://bf4flmh363ft" path="res://Art/Hotels.jpg" id="2_jg7dq"]
[ext_resource type="Texture2D" uid="uid://ngrxtkgei2nc" path="res://Art/Buttons/SmallButtons/SmallButtons/Back/Back Norm.PNG" id="3_i71vp"]
[ext_resource type="Texture2D" uid="uid://bsbncxf1cw13" path="res://Art/Buttons/SmallButtons/SmallButtons/Back/Back Click.PNG" id="4_cloeu"]
[ext_resource type="Texture2D" uid="uid://dal8cg5xciq7g" path="res://Art/Cross.png" id="4_oh1k7"]
[ext_resource type="Texture2D" uid="uid://cknkbquh0w1hu" path="res://Art/Buttons/SmallButtons/SmallButtons/Back/Back Hover.PNG" id="5_pykjl"]
[ext_resource type="Texture2D" uid="uid://btdwg7hs78h3w" path="res://Art/Buttons/SmallButtons/SmallButtons/Hats/Hats Norm.PNG" id="6_8vu3b"]
[ext_resource type="PackedScene" uid="uid://t8ujyfxc0bj2" path="res://shop.tscn" id="6_h10t3"]
[ext_resource type="Script" path="res://TEMPORARY_LOGIN.gd" id="7_3w7fa"]
[ext_resource type="Texture2D" uid="uid://daoxqm67o62t0" path="res://Art/Buttons/SmallButtons/SmallButtons/Hats/Hats Click.PNG" id="7_l1vqu"]
[ext_resource type="Texture2D" uid="uid://38bbtip240je" path="res://Art/Buttons/SmallButtons/SmallButtons/Hats/Hats Hover.PNG" id="8_fdnof"]
[ext_resource type="Texture2D" uid="uid://de6hdarhddxlg" path="res://Art/Buttons/SmallButtons/SmallButtons/stats/Stats Norm.PNG" id="10_p3lsv"]
[ext_resource type="PackedScene" uid="uid://dw5qmr7hag3qs" path="res://highscores.tscn" id="11_0wkqi"]
[ext_resource type="Texture2D" uid="uid://c663rfibeo7nq" path="res://Art/Buttons/SmallButtons/SmallButtons/stats/Stats Click.PNG" id="11_5ir5g"]
[ext_resource type="Texture2D" uid="uid://bmarwtpbgos14" path="res://Art/Buttons/SmallButtons/SmallButtons/stats/Stats Hover.PNG" id="12_qf3kc"]
[ext_resource type="Texture2D" uid="uid://7mkvjcpyxcot" path="res://Art/Buttons/BigButtons/BigButtons/Play/Play Norm.PNG" id="13_leiwq"]
[ext_resource type="Texture2D" uid="uid://drxujpv2vssln" path="res://Art/Buttons/BigButtons/BigButtons/Play/Play Click.PNG" id="14_jcbew"]
[ext_resource type="Texture2D" uid="uid://dxsgleiim5207" path="res://Art/Buttons/BigButtons/BigButtons/Play/Play Hover.PNG" id="15_yfk1q"]
[ext_resource type="Texture2D" uid="uid://cjy6bbcu3fmgh" path="res://Art/Buttons/BigButtons/BigButtons/Shooter/Shooter Norm.PNG" id="16_r7an8"]
[ext_resource type="Texture2D" uid="uid://ciowy1jdkys1x" path="res://Art/Buttons/BigButtons/BigButtons/Shooter/Shooter Click.PNG" id="17_3iir3"]
[ext_resource type="Texture2D" uid="uid://dabyo6dj4yfc3" path="res://Art/Buttons/BigButtons/BigButtons/Shooter/Shooter Hover.PNG" id="18_hj066"]
[ext_resource type="Texture2D" uid="uid://ck8w6kuw4ecne" path="res://Art/Buttons/BigButtons/BigButtons/Clicker/Clicker Norm.PNG" id="19_jsrpp"]
[ext_resource type="Texture2D" uid="uid://cstvh5l6431ko" path="res://Art/Buttons/BigButtons/BigButtons/Clicker/Clicker Click.PNG" id="20_8tgw7"]
[ext_resource type="Texture2D" uid="uid://dh38dimk1k6p3" path="res://Art/Buttons/BigButtons/BigButtons/Clicker/Clicker Hover.PNG" id="21_acw61"]
[ext_resource type="Texture2D" uid="uid://dytyx2a5k6y4s" path="res://Art/Buttons/SmallButtons/SmallButtons/delete/Delete Norm.PNG" id="22_pxkns"]
[ext_resource type="Texture2D" uid="uid://7018bf78hfm4" path="res://Art/Buttons/SmallButtons/SmallButtons/delete/Delete Click.PNG" id="23_e8oi7"]
[ext_resource type="Texture2D" uid="uid://cnm4x4ijbb2by" path="res://Art/Buttons/SmallButtons/SmallButtons/delete/Delete Hover.PNG" id="24_6fr6s"]
[ext_resource type="AudioStream" uid="uid://d32ubys6q85k" path="res://Art/Music/hotel music.mp3" id="28_d2cc1"]

[sub_resource type="QuadMesh" id="QuadMesh_5u83m"]

[node name="PigeonSpawner" type="Node2D"]
script = ExtResource("1_llwul")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TEMPORARY_LOGIN" type="Node" parent="."]
script = ExtResource("7_3w7fa")

[node name="HTTPRequest" type="HTTPRequest" parent="TEMPORARY_LOGIN"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1001, 608)

[node name="BackButton" type="TextureButton" parent="Camera2D"]
visible = false
z_index = 1
offset_left = -354.0
offset_top = 141.0
offset_right = -291.0
offset_bottom = 202.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_i71vp")
texture_pressed = ExtResource("4_cloeu")
texture_hover = ExtResource("5_pykjl")
ignore_texture_size = true
stretch_mode = 0

[node name="AccessoryButton" type="TextureButton" parent="Camera2D"]
visible = false
z_index = 1
offset_left = -277.0
offset_top = 141.0
offset_right = -214.0
offset_bottom = 202.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_8vu3b")
texture_pressed = ExtResource("7_l1vqu")
texture_hover = ExtResource("8_fdnof")
ignore_texture_size = true
stretch_mode = 0

[node name="AccessoriesArea" type="MeshInstance2D" parent="Camera2D/AccessoryButton"]
visible = false
modulate = Color(0.623529, 0.792157, 0.509804, 1)
position = Vector2(16, -183.75)
scale = Vector2(181, 296.5)
mesh = SubResource("QuadMesh_5u83m")

[node name="ItemList" type="ItemList" parent="Camera2D/AccessoryButton"]
visible = false
layout_mode = 0
offset_left = -60.0
offset_top = -317.0
offset_right = 94.0
offset_bottom = -51.0
mouse_default_cursor_shape = 2
item_count = 1
item_0/text = ""
item_0/icon = ExtResource("4_oh1k7")

[node name="StatsButton" type="TextureButton" parent="Camera2D"]
visible = false
z_index = 1
offset_left = -201.0
offset_top = 143.0
offset_right = -141.0
offset_bottom = 203.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_p3lsv")
texture_pressed = ExtResource("11_5ir5g")
texture_hover = ExtResource("12_qf3kc")
ignore_texture_size = true
stretch_mode = 0

[node name="StatsArea" type="MeshInstance2D" parent="Camera2D/StatsButton"]
visible = false
modulate = Color(0.623529, 0.792157, 0.509804, 1)
position = Vector2(-60, -185)
scale = Vector2(181, 296.5)
mesh = SubResource("QuadMesh_5u83m")

[node name="StatsText" type="RichTextLabel" parent="Camera2D/StatsButton"]
visible = false
layout_mode = 0
offset_left = -129.0
offset_top = -286.0
offset_right = 10.0
offset_bottom = -81.0
theme_override_colors/font_outline_color = Color(0.30149, 0.489073, 0.23141, 1)
theme_override_constants/outline_size = 19
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
text = "[center] Stats:

CON: 15
CHA: 30
"

[node name="MinigamesButton" type="TextureButton" parent="Camera2D"]
visible = false
z_index = 1
offset_left = 149.0
offset_top = 131.0
offset_right = 352.0
offset_bottom = 204.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_leiwq")
texture_pressed = ExtResource("14_jcbew")
texture_hover = ExtResource("15_yfk1q")
ignore_texture_size = true
stretch_mode = 0

[node name="ShooterButton" type="TextureButton" parent="Camera2D/MinigamesButton"]
visible = false
z_index = 1
layout_mode = 0
offset_top = -65.0
offset_right = 203.0
offset_bottom = 8.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("16_r7an8")
texture_pressed = ExtResource("17_3iir3")
texture_hover = ExtResource("18_hj066")
ignore_texture_size = true
stretch_mode = 0

[node name="ClickerButton" type="TextureButton" parent="Camera2D/MinigamesButton"]
visible = false
layout_mode = 0
offset_top = -133.0
offset_right = 385.0
offset_bottom = 6.0
scale = Vector2(0.525263, 0.525263)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19_jsrpp")
texture_pressed = ExtResource("20_8tgw7")
texture_hover = ExtResource("21_acw61")

[node name="Delete" type="TextureButton" parent="Camera2D"]
visible = false
z_index = 1
offset_left = 70.0
offset_top = 138.0
offset_right = 133.0
offset_bottom = 199.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("22_pxkns")
texture_pressed = ExtResource("23_e8oi7")
texture_hover = ExtResource("24_6fr6s")
ignore_texture_size = true
stretch_mode = 0

[node name="Hotels" type="Sprite2D" parent="."]
position = Vector2(1000.11, 600)
scale = Vector2(1.04155, 1.11111)
texture = ExtResource("2_jg7dq")

[node name="Shop" parent="." instance=ExtResource("6_h10t3")]
z_index = 10
position = Vector2(0, 18)

[node name="Highscores" parent="." instance=ExtResource("11_0wkqi")]
z_index = 5

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_d2cc1")
volume_db = -30.0
autoplay = true

[node name="SFXs" type="AudioStreamPlayer" parent="."]
volume_db = 5.0

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Camera2D/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Camera2D/AccessoryButton" to="." method="_on_accessory_button_pressed"]
[connection signal="item_clicked" from="Camera2D/AccessoryButton/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Camera2D/StatsButton" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="Camera2D/MinigamesButton" to="." method="_on_minigames_button_pressed"]
[connection signal="pressed" from="Camera2D/MinigamesButton/ShooterButton" to="." method="_on_shooter_button_pressed"]
[connection signal="pressed" from="Camera2D/MinigamesButton/ClickerButton" to="." method="_on_clicker_button_pressed"]
[connection signal="pressed" from="Camera2D/Delete" to="." method="_on_delete_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
